[package]
name = "prompt-eval-rubric"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
description = "Score LLM outputs against named 0.0-1.0 rubrics. Rubrics rank; validators reject. Weighted aggregation, exception-isolated scoring."
authors = ["Mukunda Rao Katta <mukunda.vjcs6@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/MukundaKatta/prompt-eval-rubric-rs"
homepage = "https://github.com/MukundaKatta/prompt-eval-rubric-rs"
documentation = "https://docs.rs/prompt-eval-rubric"
readme = "README.md"
keywords = ["llm", "evaluation", "rubric", "scoring", "prompt"]
categories = ["api-bindings"]
exclude = [".github/*", "target/*", "*.log"]

[dependencies]
serde_json = "1"

[dev-dependencies]
serde_json = "1"
